[project]
name = "alembic-gauntlet"
dynamic = ["version"]
description = "Testing toolkit for Alembic migrations — run your migrations through the gauntlet"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alex Shalaev", email = "shalaevad.alexey@gmail.com" }]
keywords = ["alembic", "testing", "migrations", "postgresql", "pytest", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.8.0,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "pytest>=7.0.0",
]

[project.urls]
Repository = "https://github.com/bedrock-python/alembic-gauntlet"
Documentation = "https://bedrock-python.github.io/alembic-gauntlet/"
Changelog = "https://github.com/bedrock-python/alembic-gauntlet/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bedrock-python/alembic-gauntlet/issues"

[project.entry-points."pytest11"]
alembic-gauntlet = "alembic_gauntlet.fixtures"

[project.optional-dependencies]
testcontainers = ["testcontainers[postgres]>=4.0.0"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "asyncpg>=0.29.0",
    "testcontainers[postgres]>=4.0.0",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    { include-group = "test" },
]

[tool.uv]
link-mode = "copy"

[tool.hatch.version]
path = "alembic_gauntlet/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["alembic_gauntlet"]

[tool.hatch.build.targets.sdist]
include = ["/alembic_gauntlet", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.10"
files = ["alembic_gauntlet"]
mypy_path = ["."]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = ["TRY003", "S101", "ANN401", "RUF012", "S104", "S105", "S106", "ANN204", "DTZ", "ANN", "N802", "PERF401", "SIM105", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.coverage.run]
source = ["alembic_gauntlet"]
omit = [
    "tests/*",
    "*/test_*.py",
    # Imports and meta files - nothing to test
    "*/__init__.py",
    "*/__version__.py",
    # Exception classes - no logic to test
    "*/exceptions.py",
    # Pytest fixtures - tested when used
    "*/fixtures.py",
    # Test mixins - tested via integration tests
    "*/testing/*",
    # Optional contrib modules - tested separately
    "*/contrib/*",
]
